Fixed jumping picture

--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,8 @@ body {
 #MainPic {
   margin-top: 15%;
   border-radius: 50%;
-  width: 50%;
+  width: 50vw;
+  min-height: 50vw;
   height: auto;
   border: 1px solid rgba(0, 0, 0, 0.1);
 }
@@ -289,7 +290,8 @@ body {
 
   #MainPic {
     margin-top: 5%;
-    width: 15%;
+    width: 15vw;
+    min-height: 15vw;
     height: auto;
     border: 4px solid rgba(0, 0, 0, 0.1);
   }
